--- a/SkyDrive/SkyDrive/SkyDrive.csproj
+++ b/SkyDrive/SkyDrive/SkyDrive.csproj
@@ -14,8 +14,8 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\DAL\SkyDrive.DAL.csproj" />
     <ProjectReference Include="..\SkyDrive.BLL\SkyDrive.BLL.csproj" />
+    <ProjectReference Include="..\SkyDrive.DAL\SkyDrive.DAL.csproj" />
   </ItemGroup>
 
   <ItemGroup>
