--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -28,3 +28,7 @@ jobs:
       run: |
             cd ./SkyDrive
             dotnet build --no-restore
+    - name: Test
+      run: |
+            cd ./SkyDrive
+            dotnet test
