--- a/SkyDrive/SkyDrive.Tests/SkyDrive.Tests.csproj
+++ b/SkyDrive/SkyDrive.Tests/SkyDrive.Tests.csproj
@@ -28,6 +28,7 @@
   <ItemGroup>
     <ProjectReference Include="..\SkyDrive.BLL\SkyDrive.BLL.csproj" />
     <ProjectReference Include="..\SkyDrive.DAL\SkyDrive.DAL.csproj" />
+    <ProjectReference Include="..\SkyDrive\SkyDrive.csproj" />
   </ItemGroup>
 
 </Project>
