Add integration tests

--- a/SkyDrive/SkyDrive/SkyDrive.csproj
+++ b/SkyDrive/SkyDrive/SkyDrive.csproj
@@ -22,6 +22,8 @@
 
   <ItemGroup>
     <ProjectReference Include="..\SkyDrive.BLL\SkyDrive.BLL.csproj" />
+
+    <InternalsVisibleTo Include="SkyDrive.Tests" />
   </ItemGroup>
 
 </Project>
