--- a/SkyDrive/SkyDrive/appsettings.json
+++ b/SkyDrive/SkyDrive/appsettings.json
@@ -8,5 +8,10 @@
   "ConnectionStrings": {
     "DefaultConnection": "Server=DESKTOP-9VMM6H3;Database=SkyDriveDb;Trusted_Connection=True;TrustServerCertificate=True"
   },
+  "Authentication": {
+    "Domain": "https://dev-ih5zsl10t5jsta03.eu.auth0.com/",
+    "Audience": "AufZero",
+    "ClientId": "8AfyeJxBb8CQOY39bWgaSmXryLVZQrR0"
+  },
   "AllowedHosts": "*"
 }
