--- a/SkyDrive.PaymentService/SkyDrive.Payment.Services/SkyDrive.Payment.Services.csproj
+++ b/SkyDrive.PaymentService/SkyDrive.Payment.Services/SkyDrive.Payment.Services.csproj
@@ -8,6 +8,7 @@
 
   <ItemGroup>
     <PackageReference Include="Braintree" Version="5.15.0" />
+    <PackageReference Include="Mapster" Version="7.3.0" />
     <PackageReference Include="Microsoft.Extensions.Configuration" Version="7.0.0" />
     <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="7.0.0" />
     <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="7.0.0" />
