--- a/SkyDrive/SkyDrive/appsettings.json
+++ b/SkyDrive/SkyDrive/appsettings.json
@@ -6,7 +6,8 @@
     }
   },
   "ConnectionStrings": {
-    "DefaultConnection": "Server=DESKTOP-9VMM6H3;Database=SkyDriveDb;Trusted_Connection=True;TrustServerCertificate=True"
+    "DefaultConnection": "Server=DESKTOP-9VMM6H3;Database=SkyDriveDb;Trusted_Connection=True;TrustServerCertificate=True",
+    "DockerConnection": "Server=sqlserver,1433;Database=SkyDriveDb;User Id=SA;Password=1234@qwerty;Encrypt=false;MultipleActiveResultSets=true"
   },
   "AllowedHosts": "*"
 }
