--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -27,8 +27,8 @@ jobs:
     - name: Build
       run: |
             cd ./SkyDrive
-            dotnet build --no-restore
+            dotnet build SkyDrive.sln --no-restore
     - name: Test
       run: |
             cd ./SkyDrive
-            dotnet test
+            dotnet test SkyDrive.sln
